--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta chatser="UTF-8">
+    <meta name="viewport" ccontent="width=device-width,initial-scale=1.0">
     <title>Hotstar</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/x-icon" sizes="48x48" href="images/icon.png">
